<resources>
  <string name="app_name">Autofile</string>
  <string name="hint_make">Make:</string>
  <string name="hint_model">Model:</string>
  <string name="hint_color">Color: </string>
  <string name="menu_addAutofile">New</string>
  <string name="menu_deleteAutofile">Delete</string>
  <string name="enter_autofile_make"> Please enter a Make </string>
  <string name="button_addImage"> Edit </string>
  <string name="select_autofile_image">Select vehicle image</string>
  <string name="fav">favourite</string>
  <string name="descriptionVImage">Vehicle Image</string>
  <string name="hint_date_visited">Date</string>
  <string name="enter_date_visited">Please enter date visited</string>
  <string name="autofile_delete">Entry deleted successfully</string>
  <string name="user_settings">Settings</string>
  <string name="menu_logout">Logout</string>
  <string name="email">Email: </string>
  <string name="total_autofiles">Total Vehicles: </string>
  <string name="title_activity_autofile_maps">Map of all Vehicles</string>
  <string name="menu_saveAutofile">Save</string>
  <string name="title_activity_autofile_list">Vehicles</string>
  <string name="title_activity_autofile">Edit Vehicle</string>
  <string name="title_activity_edit_location">Vehicle</string>
  <string name="title_activity_login">Signup/Login to Autofile</string>
  <string name="menu_map">View map</string>
  <string name="title_activity_settings">Settings</string>
  <string name="favourite">Favourite</string>
  <string name="loc_default">00.000000</string>
  <string name="image_add_or_take">Image add or take</string>
  <string name="click_markers_for_info">Click markers for info</string>
  <string name="rating">Rating:</string>
  <string name="favourites_view">Favourites view</string>
  <string name="title_activity_search">Search Results</string>
  <string name="google_sign_in">Google Sign in</string>

</resources>

