<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/item_search"
    android:icon="@android:drawable/ic_menu_search"
    android:title="Search"
    android:tint="#FFFFFF"
    app:showAsAction="never" />

  <item
    android:id="@+id/toggle_favourites"
    android:icon="@android:drawable/btn_star"
    android:title="Toggle favourites"
    app:showAsAction="always" />

  <item
    android:id="@+id/item_map"
    android:title="@string/menu_map"
    app:showAsAction="never"/>

  <item
    android:id="@+id/user_settings"
    android:icon="@android:drawable/ic_menu_preferences"
    android:title="@string/user_settings"
    app:showAsAction="never" />

  <item
    android:id="@+id/user_logout"
    android:title="@string/menu_logout"
    app:showAsAction="never"/>
</menu>