<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="org.wit.autofile.views.autofile.AutofileView"
  tools:layout_editor_absoluteY="25dp">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    app:elevation="0dip"
    app:layout_constraintTop_toTopOf="parent"
    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:titleTextColor="@color/colorPrimary" />
  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="359dp"
    android:layout_height="721dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/appBarLayout"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
    app:layout_constraintVertical_bias="1.0">

    <Button
      android:id="@+id/chooseImage"
      android:layout_width="82dp"
      android:layout_height="52dp"
      android:background="@drawable/rounded_button"
      android:drawableStart="@android:drawable/ic_media_rew"
      android:drawableRight="@android:drawable/ic_menu_gallery"
      android:padding="8dp"
      android:text="@string/button_addImage"
      android:textColor="@color/colorPrimary"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/dateViewed"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/autofileImage"
      app:layout_constraintTop_toBottomOf="@+id/favourite" />

    <EditText
      android:id="@+id/autofileMake"
      android:layout_width="258dp"
      android:layout_height="40dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="12dp"
      android:backgroundTint="#2DA8A5A5"
      android:inputType="text"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/model"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.787"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/autofileImage"
      app:layout_constraintVertical_bias="1.0" />

    <EditText
      android:id="@+id/model"
      android:layout_width="258dp"
      android:layout_height="40dp"
      android:layout_marginBottom="12dp"
      android:backgroundTint="#2DA8A5A5"
      android:inputType="text"
      android:maxLength="25"
      android:maxLines="1"
      android:padding="8dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/color"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.787"
      app:layout_constraintStart_toStartOf="parent" />

    <EditText
      android:id="@+id/dateViewed"
      android:layout_width="91dp"
      android:layout_height="37dp"
      android:backgroundTint="#2DA8A5A5"
      android:gravity="center_horizontal"
      android:hint="@string/hint_date_visited"
      android:inputType="date"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textSize="12sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/autofileMake"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.428"
      app:layout_constraintStart_toEndOf="@+id/autofileImage"
      app:layout_constraintTop_toBottomOf="@+id/favourite"
      app:layout_constraintVertical_bias="0.92" />

    <EditText
      android:id="@+id/color"
      android:layout_width="258dp"
      android:layout_height="40dp"
      android:layout_marginBottom="12dp"
      android:backgroundTint="#2DA8A5A5"
      android:inputType="text"
      android:maxLength="15"
      android:maxLines="25"
      android:padding="8dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/rating"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.782"
      app:layout_constraintStart_toStartOf="parent" />

    <ImageView
      android:id="@+id/autofileImage"
      android:layout_width="192dp"
      android:layout_height="232dp"
      android:layout_marginTop="90dp"
      android:adjustViewBounds="false"
      android:contentDescription="@string/image_add_or_take"
      android:description="@string/descriptionVImage"
      android:scaleType="centerCrop"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.118"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_launcher_background"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RatingBar
      android:id="@+id/rating"
      style="@android:style/Widget.Material.RatingBar"
      android:layout_width="245dp"
      android:layout_height="41dp"
      android:layout_marginEnd="31dp"
      android:layout_marginBottom="20dp"
      android:backgroundTint="#C3F87777"
      android:numStars="5"
      android:rating="1"
      app:layout_constraintBottom_toTopOf="@+id/mapLabel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/ratingLabel"
      app:layout_constraintStart_toStartOf="parent" />

    <Switch
      android:id="@+id/favourite"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="208dp"
      android:switchPadding="5dp"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textColor="#9EA0A5"
      android:textIsSelectable="false"
      android:textSize="10sp"
      app:layout_constraintBottom_toTopOf="@+id/autofileMake"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.64"
      app:layout_constraintStart_toEndOf="@+id/autofileImage" />

    <TextView
      android:id="@+id/makeLabel"
      android:layout_width="wrap_content"
      android:layout_height="0dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="24dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="@string/hint_make"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/autofileMake"
      app:layout_constraintHorizontal_bias="0.535"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/autofileImage" />

    <TextView
      android:id="@+id/modelLabel"
      android:layout_width="wrap_content"
      android:layout_height="20dp"
      android:layout_marginStart="10dp"
      android:layout_marginTop="32dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="@string/hint_model"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/model"
      app:layout_constraintHorizontal_bias="0.739"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/makeLabel" />

    <TextView
      android:id="@+id/colorLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="32dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="@string/hint_color"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/color"
      app:layout_constraintHorizontal_bias="0.517"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/modelLabel" />

    <TextView
      android:id="@+id/ratingLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="28dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="@string/rating"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/rating"
      app:layout_constraintHorizontal_bias="0.517"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/colorLabel" />

    <TextView
      android:id="@+id/mapLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="7dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="click map to edit location"
      android:textAppearance="@style/TextAppearance.AppCompat.Small"
      android:textSize="12sp"
      app:layout_constraintBottom_toTopOf="@+id/mapView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

    <TextView
      android:id="@+id/favouriteLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="90dp"
      android:layout_marginEnd="1dp"
      android:clickable="false"
      android:contextClickable="false"
      android:gravity="center_horizontal"
      android:text="@string/favourite"
      android:textAppearance="@style/TextAppearance.AppCompat.Body2"
      android:textColor="#56424242"
      android:textSize="10sp"
      app:layout_constraintBottom_toTopOf="@+id/favourite"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.609"
      app:layout_constraintStart_toEndOf="@+id/autofileImage"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0" />

    <com.google.android.gms.maps.MapView
      android:id="@+id/mapView"
      android:layout_width="356dp"
      android:layout_height="137dp"
      android:layout_marginTop="52dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ratingLabel" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>